media/css/mediathread.css
/* ... */
.selection-assignment .asset-view-tabs {
    padding-left: 15px !important;
    width: 32% !important;
}

.selection-assignment .asset-view-published {
    border: 0;
}

.selection-assignment h3.annotation-header a {
    font-size: .9em;
}

.selection-assignment .annotation-header:not(.ui-state-active) .annotation-listitem-icon {
    display: none;
}

.sequence-assignment {
    min-width: 970px;
    width: 100%;
}

.sequence-assignment .col-half {
    width: 49%;
}

.sequence-assignment .assignment-response-title {
    margin-top: 0;
    font-size: 22px;
    font-weight: bold;
}

.sequence-assignment .assignment-response-author {
    margin-top: 10px;
    font-size: 110%;
}
.sequence-assignment input[name='title'] {
    display: inline;
    width: 75%;
}

.sequence-assignment .panel-title a {
    color: #383838;
    font-size: 14px;
}

.sequence-assignment .btn-tab {
    line-height: 1;
    border-radius: 3px;
    margin-left: 5px;
    padding: 7px 9px;
margin-top: 5px;
}

.sequence-assignment .btn-tab:hover,
.sequence-assignment .btn-tab:active,
.sequence-assignment .btn-tab:focus {
  color: #fff;
  background-color: #286090;
  border-color: #204d74;
}

.sequence-assignment .tab-content {
    border: 1px solid #ddd;
    padding: 15px;
    margin-top: -1px;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
    box-shadow: 0 1px 1px rgba(0,0,0,.05);
}

.sequence-assignment textarea[name='comment'] {
    height: 200px;
}
.sequence-assignment textarea[name='body'] {
    height: 300px;
}

.sequence-assignment .alert-success {
    padding: 5px;
    margin-right: 10px;
}

.affix-top, .affix {
    position: static;
    width: inherit;
    padding-right: 20px;
}

@media (min-width: 1024px) {
    .selection-assignment .affix-top {
        position: static;
    }

    .selection-assignment .affix {
        position: fixed;
    }
}

.selection-assignment .mceLayout,
.selection-assignment textarea {
    width: 100% !important;
    height: 100%;
}

.selection-assignment .gallery-item-overlay {
    position: absolute;
    background: rgba(119,119,119,.70);
    text-align: center;
    vertical-align: middle;
    opacity:0.70;
    -moz-opacity:0.70;
    filter:alpha(opacity=70);
    font-weight: 900;
    color: white;
    font-size: 48px;
    z-index: 1000;
    cursor: pointer;
}

.selection-assignment .gallery-item-overlay div {
    margin-top: 40%;
    outline: 0;
    -moz-user-select: none; 
    -khtml-user-select: none; 
    user-select: none;
}

.selection-assignment .selected-item .meta {
    display: none;
}

.selection-assignment .filter-selections {
    display: none;
}

.selection-assignment .selected-item .gallery-item {
    margin-top: 30px;
    float: none;
}

.sherd-vimeo-wrapper iframe {
    border: 0;
}

/* select2 customizations */
.select2-container-multi .select2-choices .select2-search-field input {
    height: 28px;
}
/* end select2 customizations */

#chrome-install-button,
#safari-install-button,
#firefox-install-button {
    margin-bottom: 5px;
    margin-right: 5px;
}

.update-chrome-extension-feedback {
    margin-top: 5px;
}

.roster-container table td.role {
    width: 16%;
}

.roster-messaging {
     line-height: 1.75em
}

.roster-messaging .glyphicon-remove {
    color: #a94442;
}

.roster-messaging .glyphicon-ok {
    color: #3c763d;
}

.search-box {
    -webkit-border-radius: 18px;
    -moz-border-radius: 18px;
    border-radius: 18px;
}

.course-search {
    width: 200px;
}

.projectlist.pagination {
    margin-bottom: 0px;
    float: right;
}

.projectlist.pagination.bottom {
    margin-top: 0px;
}

.projectlist.pagination a {
    font-weight: normal;
    border: 0;
    border-radius: 4px;
    font-size: .75em;
    padding: 7px;
}

.projectlist.pagination li.description span {
    border: 0;
    font-size: .9em;
    padding: 6px 4px 0 4px;
}

.projectlist.pagination li.description span:hover,
.projectlist.pagination li.description span:active,
.projectlist.pagination li.description a:active,
.projectlist.pagination li.description a:hover {
    background-color: white;
    color: #337ab7;
}

.layout-horizontal {
    -webkit-flex: 1 0 auto;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}
.layout-horizontal .layout-horizontal-left {
}
.layout-horizontal .layout-horizontal-right {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
}

ul.section-tabs {
    list-style: none;
    margin: 0;
    margin-right: 12px;
    padding: 0;
}

ul.section-tabs>li>a {
    display: block;
    padding: 6px 12px;
}

ul.section-tabs>li>a.active {
    background-color: #1b75bc;
    color: white;
}

.sherd-flowplayer-download-btn {
    display: none;
    font-size: 1.5em;
    margin: 10px;
    float: right;
}

.collection-widget span.citationTemplate {
    float: left;
}

.collection-widget .actions {
    margin-top: 0;
}

.collection-widget .asset-title-link.insert {
    float: left;
}

.collection-widget table, .collection-widget tr, .collection-widget td {
    border: none;
}

.mce-i-icon-collection {
    width:100px;
    display:block;
    height:20px;
    background:black;
    color:white;
    text-decoration:none;
    padding-left:20px;
}
.mce-i-icon-collection:before{
    content: '';
    background: url('../img/viewfullcollection.png');
    background-size:cover;
    position:absolute;
    width: 12px;
    height: 12px;
    margin-top: 2px;
}

#collection-modal .modal-dialog {
    width: 650px !important;
}

#collection-modal .filter-widget .row {
    margin-right: 0;
    margin-left: 0;
}

#collection-modal .ajaxloader {
    width: 96%;
}

#collection-modal .col-md-5,
collection-modal .col-md-4,
collection-modal .col-md-3,
collection-modal .col-md-2 {
    padding-right: 5px;
    padding-left: 5px;
}

#collection-modal .modal-body {
    max-height: 85vh; /* Sets the height to 80/100ths of the viewport. */
    overflow-y: auto;
    margin-bottom: 2px;
}
/* ... */

